--- a/css/main.css
+++ b/css/main.css
@@ -139,7 +139,7 @@ ul.menu-top__list {
     flex-basis: 50%;
     display: flex;
     flex-direction: column;
-    justify-content: flex-end;
+    justify-content: center;
     align-items: center;
 }
 
