--- a/css/main.css
+++ b/css/main.css
@@ -252,6 +252,9 @@ ul.menu-top__list {
 .fouthpage__block {
     padding-top: 10%;
 }
+.fouthpage__name {
+    margin-bottom: 5%;
+}
 .fouthpage__hidden__description {
     padding-left: 20px;
 }
@@ -264,28 +267,36 @@ ul.menu-top__list {
 .fouthpage__item:hover .fouthpage__name {
     color: #f9b43b;
 }
+.fouthpage__item--show .fouthpage__name {
+    color: #f9b43b;
+}
 .fouthpage__item:before {
 
 }
 .fouthpage__hidden {
-    /*height: 0;
-    overflow: hidden;*/
     display: flex;
+    height: 0;
+    overflow: hidden;
+    width: 70%;
     flex-direction: row;
     justify-content: flex-start;
     align-items: center;
+}
+.fouthpage__item--show .fouthpage__hidden {
+    height: auto;
+    overflow: hidden;
     padding-top: 15px;
     padding-bottom: 40px;
 }
+
 .fouthpage__hidden__img {
     height: 100px;
     width: 100px;
     border-radius: 50%;
     background-color: #f9b43b;
     overflow: hidden;
-   
-    
 }
+
 .fouthpage__img {
     object-fit: cover;
     height: 100%;
@@ -539,6 +550,48 @@ label {
 
  /*8th page*/
  .eight-page {
-    background: #2f3234 center center no-repeat;
+    background: url('../img/map.jpg') center center no-repeat;
     background-size: cover;
+    /*position: relative;*/
+}
+
+.container__map {
+    width: 100%;
+    height: 100%;
+    position: relative;
+}
+.footer {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-color: #2f3234;
+    height: auto;
+    color: #fff;
+}
+.footer__content {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    width: 940px;
+    margin: 0 auto;
+}
+.footer__left {
+    flex-basis: 50%;
+}
+.address {
+    font-family: Ubuntu-Light;
+    font-weight: 300;
+    font-size: 14px;
+}
+.phone {
+    color: #e45028;
+    font-family: Ubuntu-Bold;
+    font-weight: 700;
+    font-size: 14px;
+}
+.footer__right {
+    flex-basis: 50%;
+    text-align: right;
 }
