--- a/css/base.css
+++ b/css/base.css
@@ -20,7 +20,7 @@ body {
    margin: 0;
    padding: 0;
    font-family: Ubuntu, Arial, Helvetica, sans-serif;
-   font-size: 18px;
+   font-size: 0px;
    color: #221f1f;
    line-height: 1.42;
    background-color: #aba4a6;
@@ -30,6 +30,7 @@ body {
     height: 100%;
     min-height: 0;
     position: relative;
+    overflow: hidden;
 }
 .maincontent {
     min-height: 650px;
