--- a/scss/sections/fifth-page.scss
+++ b/scss/sections/fifth-page.scss
@@ -29,6 +29,11 @@
     flex-direction: row;
     justify-content: flex-end;
     max-width: 50%;
+
+    @include tablets {
+        max-width: 100%;
+        left: 0;
+    }
 }
 
 .fifthpage__item--meat {
@@ -96,10 +101,9 @@
 }
 .active .fifthpage__hidden {
     height: 100%;
-    width: 90%;
+    width: 100%;
     overflow: hidden;
-    /*padding-top: rem(15px);
-    padding-bottom: rem(40px);*/
+
 }
 
 .vertical-text {
