--- a/scss/sections/fouth-page.scss
+++ b/scss/sections/fouth-page.scss
@@ -36,6 +36,7 @@
     color: #f9b43b;
     @include phones {
         font-size: 4.125rem;
+        padding-top: rem(50px);
     }
 }
 .fouthpage__block {
